--- a/stylesheet.css
+++ b/stylesheet.css
@@ -639,7 +639,12 @@ input:focus::placeholder {
   }
 
   .players {
-    gap: 1rem;
+    gap: 0.8rem;
+  }
+
+  .player1,
+  .player2 {
+    width: 41%;
   }
 
   .title {
@@ -652,7 +657,7 @@ input:focus::placeholder {
 
   form input {
     font-size: 1rem;
-    max-width: 50%;
+    max-width: 48%;
   }
 
   ::placeholder {
